# go/cmd/dashboard_server/main.go
@@ -12,7 +12,6 @@ import (
 	pb_dashboard "stackv2/go/proto/dashboard"
 
 	grpc_middleware "github.com/grpc-ecosystem/go-grpc-middleware"
-	grpc_auth "github.com/grpc-ecosystem/go-grpc-middleware/auth"
 	grpc_recovery "github.com/grpc-ecosystem/go-grpc-middleware/recovery"
 	log "github.com/sirupsen/logrus"
 	"google.golang.org/grpc"
@@ -32,7 +31,9 @@ func main() {
 	if err != nil {
 		log.Fatalf("failed to listen: %v", err)
 	}
-	auth, err := web_auth.New(web_auth.AuthOpts{})
+	auth, err := web_auth.New(web_auth.AuthOpts{
+		AllowedUnverifiedEmailMethods: []string{"/dashboard.Dashboard/Me"},
+	})
 	if err != nil {
 		log.Fatal(err)
 	}
@@ -43,10 +44,10 @@ func main() {
 
 	server := grpc.NewServer(
 		grpc.StreamInterceptor(grpc_middleware.ChainStreamServer(
-			grpc_auth.StreamServerInterceptor(auth.Authenticate), grpc_recovery.StreamServerInterceptor(recovery...),
+			auth.StreamServerInterceptor(), grpc_recovery.StreamServerInterceptor(recovery...),
 		)),
 		grpc.UnaryInterceptor(grpc_middleware.ChainUnaryServer(
-			grpc_auth.UnaryServerInterceptor(auth.Authenticate), grpc_recovery.UnaryServerInterceptor(recovery...))),
+			auth.UnaryServerInterceptor(), grpc_recovery.UnaryServerInterceptor(recovery...))),
 	)
 
 	dashboardServer, err := dashboard.New(dashboard.DashboardOpts{App: app})
